// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composerTokenizer = SUM ( C4 : C5 ) 1`] = `
[
  {
    "end": 1,
    "length": 1,
    "start": 0,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "end": 2,
    "length": 1,
    "start": 1,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 5,
    "length": 3,
    "start": 2,
    "type": "FUNCTION",
    "value": "SUM",
  },
  {
    "end": 6,
    "length": 1,
    "start": 5,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 7,
    "functionContext": {
      "argPosition": 0,
      "parent": "SUM",
    },
    "length": 1,
    "parenIndex": 1,
    "start": 6,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 8,
    "functionContext": {
      "argPosition": 0,
      "parent": "SUM",
    },
    "length": 1,
    "start": 7,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 15,
    "functionContext": {
      "argPosition": 0,
      "parent": "SUM",
    },
    "length": 7,
    "start": 8,
    "type": "REFERENCE",
    "value": "C4 : C5",
  },
  {
    "end": 16,
    "functionContext": {
      "argPosition": 0,
      "parent": "SUM",
    },
    "length": 1,
    "start": 15,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 17,
    "length": 1,
    "parenIndex": 1,
    "start": 16,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
]
`;

exports[`composerTokenizer base tests Boolean 1`] = `
[
  {
    "end": 1,
    "length": 1,
    "start": 0,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "end": 4,
    "length": 3,
    "start": 1,
    "type": "FUNCTION",
    "value": "AND",
  },
  {
    "end": 5,
    "functionContext": {
      "argPosition": 0,
      "parent": "AND",
    },
    "length": 1,
    "parenIndex": 1,
    "start": 4,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 9,
    "functionContext": {
      "argPosition": 0,
      "parent": "AND",
    },
    "length": 4,
    "start": 5,
    "type": "SYMBOL",
    "value": "true",
  },
  {
    "end": 10,
    "functionContext": {
      "argPosition": 1,
      "parent": "AND",
    },
    "length": 1,
    "start": 9,
    "type": "COMMA",
    "value": ",",
  },
  {
    "end": 15,
    "functionContext": {
      "argPosition": 1,
      "parent": "AND",
    },
    "length": 5,
    "start": 10,
    "type": "SYMBOL",
    "value": "false",
  },
  {
    "end": 16,
    "length": 1,
    "parenIndex": 1,
    "start": 15,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
]
`;

exports[`composerTokenizer base tests formula token 1`] = `
[
  {
    "end": 1,
    "length": 1,
    "start": 0,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "end": 4,
    "length": 3,
    "start": 1,
    "type": "FUNCTION",
    "value": "SUM",
  },
  {
    "end": 5,
    "functionContext": {
      "argPosition": 0,
      "parent": "SUM",
    },
    "length": 1,
    "parenIndex": 1,
    "start": 4,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 6,
    "functionContext": {
      "argPosition": 0,
      "parent": "SUM",
    },
    "length": 1,
    "start": 5,
    "type": "NUMBER",
    "value": "1",
  },
  {
    "end": 7,
    "functionContext": {
      "argPosition": 0,
      "parent": "SUM",
    },
    "length": 1,
    "start": 6,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 8,
    "functionContext": {
      "argPosition": 1,
      "parent": "SUM",
    },
    "length": 1,
    "start": 7,
    "type": "COMMA",
    "value": ",",
  },
  {
    "end": 9,
    "length": 1,
    "parenIndex": 2,
    "start": 8,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 10,
    "length": 1,
    "start": 9,
    "type": "NUMBER",
    "value": "1",
  },
  {
    "end": 11,
    "length": 1,
    "start": 10,
    "type": "OPERATOR",
    "value": "+",
  },
  {
    "end": 12,
    "length": 1,
    "start": 11,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "end": 13,
    "functionContext": {
      "argPosition": 1,
      "parent": "SUM",
    },
    "length": 1,
    "parenIndex": 2,
    "start": 12,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "end": 14,
    "functionContext": {
      "argPosition": 2,
      "parent": "SUM",
    },
    "length": 1,
    "start": 13,
    "type": "COMMA",
    "value": ",",
  },
  {
    "end": 17,
    "functionContext": {
      "argPosition": 2,
      "parent": "SUM",
    },
    "length": 3,
    "start": 14,
    "type": "FUNCTION",
    "value": "ADD",
  },
  {
    "end": 18,
    "functionContext": {
      "argPosition": 2,
      "parent": "SUM",
    },
    "length": 1,
    "start": 17,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 19,
    "functionContext": {
      "argPosition": 0,
      "parent": "ADD",
    },
    "length": 1,
    "parenIndex": 3,
    "start": 18,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 20,
    "functionContext": {
      "argPosition": 0,
      "parent": "ADD",
    },
    "length": 1,
    "start": 19,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "end": 21,
    "functionContext": {
      "argPosition": 1,
      "parent": "ADD",
    },
    "length": 1,
    "start": 20,
    "type": "COMMA",
    "value": ",",
  },
  {
    "end": 22,
    "functionContext": {
      "argPosition": 1,
      "parent": "ADD",
    },
    "length": 1,
    "start": 21,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 23,
    "functionContext": {
      "argPosition": 1,
      "parent": "ADD",
    },
    "length": 1,
    "start": 22,
    "type": "NUMBER",
    "value": "3",
  },
  {
    "end": 24,
    "functionContext": {
      "argPosition": 2,
      "parent": "SUM",
    },
    "length": 1,
    "parenIndex": 3,
    "start": 23,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "end": 25,
    "functionContext": {
      "argPosition": 3,
      "parent": "SUM",
    },
    "length": 1,
    "start": 24,
    "type": "COMMA",
    "value": ",",
  },
  {
    "end": 26,
    "functionContext": {
      "argPosition": 3,
      "parent": "SUM",
    },
    "length": 1,
    "start": 25,
    "type": "NUMBER",
    "value": "4",
  },
  {
    "end": 27,
    "length": 1,
    "parenIndex": 1,
    "start": 26,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
]
`;
